tests/golden/type_errors/function_type_call_arity_mismatch.cd
fun apply(f: fun(number): number): number {
  return f(1, 2);
}
